# AudioDataSet

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
AudioDataSet/: record_audio.py
AudioDataSet/configs/: record_config.py
AudioDataSet/recorder/: base_recordermodule.py  recorder_hardware.py
AudioDataSet/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
AudioSet/: rawdatatest.py  record_audio.py  record_audio2.py  test.py  test2.py  test3.py
AudioSet/configs/: record_config.py  record_config.yaml
AudioSet/recorder/: base_recordermodule.py  recorder_hardware.py
AudioSet/testscripts/: record_audio2.py  test2.py
configs/: config.yaml  record_config.yaml
configs/datamodule/: __init__.py  config.yaml  global_config.yaml  miniDSP.yaml  record_config.yaml  respeaker.yaml
configs/datamodule/hardware_config/: miniDSP_config.yaml  respeaker_config.yaml
configs/experiment/: example.yaml
configs/experiment/audiorecord/: class1.yaml  exp1.yaml
configs/experiment_config/: default_experiment_meta.yaml
configs/hardware_config/: miniDSP_config.yaml  respeaker_config.yaml
configs/hydra/: default.yaml
configs/modules/network/: miniDSP.yaml  respeaker.yaml
configs/paths/: default.yaml
configs/recorder_config/: recorder_config.yaml
experiment/audiorecord/: class1.yaml
outputs/2024-12-13/11-35-07/.hydra/: hydra.yaml
outputs/2024-12-13/11-43-08/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-13/11-45-43/.hydra/: hydra.yaml
outputs/2024-12-13/11-51-02/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-13/12-01-37/.hydra/: config.yaml  (+1 more)
src/: main_record.py
src/recorder/: record_config.py  recorder_hardware.py
src/testscripts/: record_audio2.py
(+8 files in other folders)
