[tool.poetry]
name = "AudioDataSet"
version = "0.1.1"
description = "AudioDataSet: A data pipeline for audio Localization and Classification"
authors = ["Paria Vali Zadeh <pvz@informatik.uni-kiel.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.11.3"
ffprobe = "^0.5"
torch = "^2.5.0"  # Ensure compatible ARM PyTorch version
torchvision = "^0.16.0"
torchaudio = "^0.13.0"
lightning = "^2.2.2"
torchmetrics = "^0.11"
tensorflow = "^2.11.0"  # Compatible TensorFlow Lite version
tensorflow-hub = "^0.16.1"
tensorboard = "^2.11.1"
hydra-core = "^1.3"
hydra-colorlog = "^1.2"
hydra-optuna-sweeper = "^1.2"
rootutils = "^1.0.7"
pre-commit = "^3.5.0"
rich = "^13.6.0"
pytest = "^7.4.2"
sh = "^2.0.6"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
datasets = "^2.14.6"
audiomentations = "^0.33.0"
torch-audiomentations = "^0.11.0"
wandb = "^0.16.0"
transformers = "^4.38.0"
pyrootutils = "^1.0.4"
mlflow = "^2.11.0"
pydub = "^0.25.1"
tabulate = "^0.9.0"
timm = "0.4.5"
einops = "^0.8.0"
numba = "0.60.0"
numpy = "^1.26.4"
sounddevice = "^0.5.1"
wave = "^0.0.2"
pyserial = "^3.5"  # To access serial hardware (e.g., ReSpeaker, USB audio interfaces)

# --------- loggers --------- #
wandb = "^0.16.0"
neptune-client = "^1.2.0"
mlflow = "^2.11.0"
comet-ml = "^3.33.0"
aim = ">=3.16.2"  # Use version 3.16.2 or higher

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
plumbum = "^1.8.2"
jsonlines = "^4.0.0"
kaggle = "^1.6.11"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

